--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,22 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 curl_cffi==0.11.1
+filelock==3.18.0
 frozendict==2.4.6
+fsspec==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
+hf-xet==1.1.3
+huggingface-hub==0.32.4
 idna==3.10
 Jinja2==3.1.6
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 MarkupSafe==3.0.2
+mpmath==1.3.0
 multitasking==0.0.11
 narwhals==1.41.0
+networkx==3.5
 numpy==2.2.6
 packaging==24.2
 pandas==2.2.3
@@ -32,16 +38,24 @@ pydeck==0.9.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
+PyYAML==6.0.2
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 rpds-py==0.25.1
+safetensors==0.5.3
 six==1.17.0
 smmap==5.0.2
 soupsieve==2.7
 streamlit==1.45.1
+sympy==1.14.0
 tenacity==9.1.2
+tokenizers==0.21.1
 toml==0.10.2
+torch==2.7.0
 tornado==6.5.1
+tqdm==4.67.1
+transformers==4.52.4
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
